style.css
body {
	min-height: 100vh;
	display: flex;
	justify-content: center;
	font-family: sans-serif;
	color: #fff;
	text-shadow: 0 1px 2px #000000;
	background-color: #4e0d77;
}

.page-content {
	display: flex;
	flex-direction: column;
	align-items: center;
}

.login-container {
	display: flex;
	align-items: center;
	justify-content: center;
	flex-direction: column;
	box-shadow: 0 0 10px #000;
	padding: 30px 20px 35px 20px;
	border-radius: 10px;
	gap: 2rem;
	margin: 0 auto;
	width: 300px;
	height: 400px;
}

input {
	padding: 0.6em 1em;
	border: 0;
	color: #fff;
	font-size: 1.2em;
	width: 250px;
	border-radius: 10px;
	background-color: rgba(255, 255, 255, 0.1);
}

input:focus {
	outline: 0;
}

button {
	padding: 0.6em 1em;
	border: none;
	border-radius: 10px;
	background-color: #8e44ad;
	color: #fff;
	font-size: 1em;
	cursor: pointer;
	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
	transition: background-color 0.3s ease;
}
button:hover {
	background-color: #732d91;
}

